made question into a class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,4 @@
   {{title}}
 </h1>
 
-Stu is definitely a person. <p>
-
-Question: <b>{{question}}</b>
+Question: <b>{{question.question}}: {{question.answer}}</b>
