messed with html tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,11 @@
   {{title}}
 </h1>
 
-Question: <b>{{question.question}}: {{question.answer}}</b>
+<div>
+	<label>Question:</label> {{question.question}}
+</div>
+
+<div>
+	<label>Answer:</label>
+	<input value="{{question.answer}}" placeholder="answer">
+</div>
