added heroes list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,10 @@
 	<label>Answer:</label>
 	<input [(ngModel)]="question.answer" placeholder="answer">
 </div>
+
+<h2>More Questions</h2>
+<ul class="questions">
+	<li>
+		<!-- each question goes here -->
+	</li>
+</ul>	
