added questions list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,6 @@
 <h2>More Questions</h2>
 <ul class="questions">
 	<li>
-		<!-- each question goes here -->
+		<li *ngFor="let question of questions">
 	</li>
 </ul>	
