--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,56 @@
 	    <input [(ngModel)]="selectedQuestion.answer" placeholder="answer"/>
 	</div>
 </div>
+
+<div id="testanchor">
+  This is a test of linking from an external website/webpage/app to a specific part of this webpage/app.
+</div>
+
+<div>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>test</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p id="testanchor2">2nd anchor! and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+<p>and this is just going to give a little space at the bottom of the page...</p>
+</div>
+
