trying to add some css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
+
+
+<div layout="row" flex layout-align="center center">
+<div layout="column" layout-align="center">
+
+
 <h1>
   {{title}}
 </h1>
 
 <h2>Questions:</h2>
-<ul class="questions">
+<ul class="questionanswerlist">
 	<li *ngFor="let question of questions" (click)="onSelect(question)">
-		<span class="question">{{question.question}}<br />{{question.answer}}</span>
+		<div class="question">{{question.question}}</div>
+        <div class="answer">{{question.answer}}</div>
 	</li>
 </ul>
 
@@ -22,55 +29,8 @@
 	</div>
 </div>
 
-<div id="testanchor">
-  This is a test of linking from an external website/webpage/app to a specific part of this webpage/app.
+
+</div>
 </div>
 
-<div>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>test</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p id="testanchor2">2nd anchor! and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-<p>and this is just going to give a little space at the bottom of the page...</p>
-</div>
 
