--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,15 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+.questionanswerlist li {
+
+    list-style-type: none;
+
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px; 
+    width: 50%;
+    height: 150px; 
+    margin-bottom: 20px;
+}
