--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,7 +11,17 @@ h1 {
     border-radius: 25px;
     border: 2px solid #73AD21;
     padding: 20px; 
-    width: 50%;
+    width: 80%;
     height: 150px; 
     margin-bottom: 20px;
+}
+
+.centering-container {
+
+    margin: auto;
+    border-radius: 25px;
+    width: 50%;
+    border: 1px solid lightgray;
+    padding: 10px;
+
 }
