--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,24 +4,69 @@ h1 {
   font-size: 250%;
 }
 
-.questionanswerlist li {
 
-    list-style-type: none;
+.custom-counter {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 
+.custom-counter li {
+    counter-increment: step-counter;
     border-radius: 25px;
     border: 2px solid #73AD21;
     padding: 20px; 
     width: 80%;
-    height: 150px; 
-    margin-bottom: 20px;
+    /* height: 150px; */
+    margin-bottom: 2em;
 }
+
+.custom-counter li::before {
+  content: counter(step-counter);
+  margin-right: 5px;
+  font-size: 2em;
+  /* background-color: rgb(0,200,200); */
+  background-color: #73AD21;
+  color: white;
+  font-weight: bold;
+  padding: 3px 8px;
+  border-radius: 3px;
+}
+
+.answer {
+    margin-left: 2.8em;
+    margin-top: 2em;
+    font-size: 1em;
+}
+
+.useranswer {
+    margin-left: 2.8em;
+    margin-top: 2em;
+    font-size: 1em;
+}
+
+
+.question {
+    font-size: 1.5em;
+    margin-bottom: 2em;
+}
+
 
 .centering-container {
-
-    margin: auto;
+    text-align: center;
+    margin: 0 auto;
     border-radius: 25px;
-    width: 50%;
+    width: 80%;
     border: 1px solid lightgray;
     padding: 10px;
-
 }
+
+.content {
+    text-align: left;
+    width: 80%;
+    margin: auto;
+    border: 0px solid;
+    padding: 10px;
+}
+
+
