--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,49 @@ h1 {
   font-size: 250%;
 }
 
+textarea {
+    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    
+
+    overflow: auto;
+    max-width: 100%;
+    resize: none; 
+    font-size: 1.5em;
+    border-radius: 20px;
+    border: 1px solid #d3d3d3; 
+    /*box-shadow: rgba(0,0,0,0.8) 0 0 10px;*/
+    /*margin: 0px;*/
+    padding: 20px;
+    /* outline: none; */
+    /*outline: 1px solid blue; */
+}
+
+.textarea-default:focus{
+    border-radius: 20px;
+    outline:none;
+    /*border: 1px solid #4195fc; */
+    /*border: 1px solid #d3d3d3; */
+    /* create a BIG glow */
+   
+    box-shadow: 0px 0px 10px #369; 
+    -moz-box-shadow: 0px 0px 10px #369;
+    -webkit-box-shadow: 0px 0px 10px #369;  
+
+    /*
+    box-shadow: 0px 0px 8px #4195fc; 
+    -moz-box-shadow: 0px 0px 8px #4195fc;
+    -webkit-box-shadow: 0px 0px 8px #4195fc;  
+    */
+    
+    /*
+    box-shadow: 0px 0px 5px #d3d3d3; 
+    -moz-box-shadow: 0px 0px 5px #d3d3d3;
+    -webkit-box-shadow: 0px 0px 5px #d3d3d3;  
+    */
+}
 
 .custom-counter {
   margin: 0;
