--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,13 +4,19 @@ h1 {
   font-size: 250%;
 }
 
+.left {
+    text-align: left;
+}
+
+ol {
+    border: 0px solid green;
+    margin: 0 auto;
+}
+
 textarea {
-    
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    
-
     overflow: auto;
     max-width: 100%;
     resize: none; 
@@ -23,6 +29,39 @@ textarea {
     /* outline: none; */
     /*outline: 1px solid blue; */
 }
+
+.btn-right {
+    float: right;
+    margin: 3em;
+}
+
+button:hover {
+    /*background: rgba(255,255,255,0.3);*/
+    /* background: lightgreen;*/
+    filter: brightness(115%);
+}
+
+button {
+    /*background: transparent;*/
+    background: #369;
+    color: #fff;
+    font-size: 1.5em;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: auto;
+    /*width: 50%;*/
+    min-height: 2em;
+    min-width: 8em;
+    /*height: 4em;*/
+    margin: 2em auto;
+    border: 0px solid #00AA66;
+    border-radius: 10%/50%;
+    /*text-align: right;*/
+    /*background-color: #000;*/
+}
+
 
 .textarea-default:focus{
     border-radius: 20px;
@@ -49,7 +88,7 @@ textarea {
 }
 
 .custom-counter {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   list-style-type: none;
 }
@@ -62,6 +101,7 @@ textarea {
     width: 80%;
     /* height: 150px; */
     margin-bottom: 2em;
+    margin-left: 2em;
 }
 
 .custom-counter li::before {
@@ -90,6 +130,7 @@ textarea {
 
 
 .question {
+    text-align: left;
     font-size: 1.5em;
     margin-bottom: 2em;
 }
@@ -105,7 +146,7 @@ textarea {
 }
 
 .content {
-    text-align: left;
+    /*text-align: left;*/
     width: 80%;
     margin: auto;
     border: 0px solid;
