--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,11 @@
 
 <!-- <h2>Questions:</h2> -->
 <!-- <ol class="questionanswerlist"> -->
-<ol class="custom-counter">
-	<li *ngFor="let question of questions" (click)="onSelect(question)">
+<ol class="custom-counter" style="float:center;">
+	<li class="left" *ngFor="let question of questions; let firstQuestion=first;" (click)="onSelect(question)">
 		<span class="question">{{question.question}}</span>
-        <div class="useranswer"><textarea class="textarea-default" rows="4" cols="80" placeholder="Type answer here please...">{{question.useranswer}}</textarea></div>
+        <!-- Set focus on the first textarea. That is, the first question on the quiz/page. -->
+        <div class="useranswer"><textarea [autofocus]="firstQuestion" class="textarea-default" rows="4" cols="80" placeholder="Type answer here please...">{{question.useranswer}}</textarea></div>
         <div class="answer">{{question.answer}}</div>
 	</li>
 </ol>
@@ -34,6 +35,9 @@
 	    <input [(ngModel)]="selectedQuestion.answer" placeholder="answer"/>
 	</div>
 </div>
+
+<button type="submit" class="btn btn-success btn-right btn-lg">Submit</button>
+<!-- <button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">New Hero</button> -->
 
 
 </div><!-- END 'content' -->
