--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,25 @@ h1 {
   font-size: 250%;
 }
 
+
+/**
+ * FONT AWESOME CUSTOMIZATIONS
+ *
+ */
+
+.fa-check-circle-o{
+    color: green;
+    margin: 10px;
+}
+
+.fa-times-circle {
+    color: red;
+    margin: 10px;
+}
+
+/* END FONT AWESOME CUSTOMIZATIONS */
+
+
 .left {
     text-align: left;
 }
@@ -11,6 +30,10 @@ h1 {
 ol {
     border: 0px solid red;
     margin: 10 auto;
+}
+
+.disabled {
+    background-color: #dcdcdc;
 }
 
 textarea {
@@ -116,15 +139,29 @@ button {
   border-radius: 3px;
 }
 
+.correct {
+    background-color: #90EE90;
+    /*fa-check-circle-o: true;*/
+}
+
+.incorrect {
+    background-color: #ffcccc;
+    /*fa-times-circle: true;*/
+}
+
 .answer {
-    margin-left: 2.8em;
-    margin-top: 2em;
-    font-size: 1em;
+    border: 0px solid lightgray;
+    border-radius: 20px;
+    margin: 1em;
+    /*padding-top: 1em;*/
+    /*margin-top: 2em;*/
+    font-size: 1.5em;
 }
 
 .useranswer {
     margin-left: 2.8em;
     margin-top: 2em;
+    margin-bottom: 2em;
     font-size: 1em;
 }
 
