--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,6 +36,14 @@ ol {
     background-color: #dcdcdc;
 }
 
+.disabled-button {
+    filter: brightness(65%);
+}
+.disabled-button:hover {
+    /*filter: brightness(100%);*/
+    cursor: not-allowed;
+}
+
 textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -57,7 +65,14 @@ textarea {
     float: right;
 }
 
-button:hover {
+/**
+ * This says to exclude the '.disabled-button' class elements when doing the hover.
+ * 
+ * That is, if an element has the 'disable-button' class, then do not apply this hover() style.
+ *
+ * This is helpful for deactivating a button after it has been submitted.
+ */
+button:not(.disabled-button):hover {
     /*background: rgba(255,255,255,0.3);*/
     /* background: lightgreen;*/
     filter: brightness(115%);
@@ -139,6 +154,11 @@ button {
   border-radius: 3px;
 }
 
+/* A generally-green continue button */
+.continue {
+    background-color: green;
+}
+
 .correct {
     background-color: #90EE90;
     /*fa-check-circle-o: true;*/
@@ -150,9 +170,11 @@ button {
 }
 
 .answer {
+    margin: 0px; 
+    width: 100%;
     border: 0px solid lightgray;
     border-radius: 20px;
-    margin: 1em;
+    /*margin: 1em;*/
     /*padding-top: 1em;*/
     /*margin-top: 2em;*/
     font-size: 1.5em;
