--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -180,6 +180,24 @@ button {
     font-size: 1.5em;
 }
 
+.quiz-done {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+	overflow: auto;
+	background-color: #0000ff; /*lightblue;*/
+	color: white;
+    margin: 1em; 
+	padding: 0.5em;
+    width: 80%;
+    border: 1px solid #0000ff;
+    border-radius: 20px;
+    /*margin: 1em;*/
+    /*padding-top: 1em;*/
+    /*margin-top: 2em;*/
+    font-size: 2em;
+}
+
 .useranswer {
     margin-left: 2.8em;
     margin-top: 2em;
