fixed element so it would center with 'auto' left/right margin

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -187,7 +187,8 @@ button {
 	overflow: auto;
 	background-color: #0000ff; /*lightblue;*/
 	color: white;
-    margin: 1em; 
+    /*margin: 0em; */
+    margin: 1em auto;
 	padding: 0.5em;
     width: 80%;
     border: 1px solid #0000ff;
