--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,45 @@
-
 <div class="centering-container">
-
 <div layout="row" flex layout-align="center center">
 <div layout="column" layout-align="center">
-
-
 <div class="content">
+
+
+
+
+
+<div *ngIf="quiz.quiz_display_type==quiz.ALL_QUESTIONS_AT_ONCE">
+<div class="highlight">Hi, we are an "ALL ?s at once"-type of quiz!</div>
 
 <h1>
   {{title}}
 </h1>
 
-<!-- <h2>Questions:</h2> -->
-<!-- <ol class="questionanswerlist"> -->
-<ol class="custom-counter">
-	<li class="left" *ngFor="let question of quiz.questions; let firstQuestion=first;">
-		<span class="question">{{question.question}}</span>
-        <!-- Set focus on the first textarea. That is, the first question on the quiz/page. -->
-        <!-- Now we manage autofocus in component, so this [autofocus]="firstQuestion" is not longer needed -->
-        <div class="useranswer">
-        <textarea   #focusThis
-                    [(ngModel)]="question.useranswer" 
-                    [disabled]="quiz.wasEvaluated"
-                    [ngClass]="{'disabled': quiz.wasEvaluated}"
-                    (keydown.enter)="quiz.evaluate();"
-                    class="textarea-default" rows="2" cols="80" placeholder="Type answer here please...">
-        </textarea>
-        </div>
-        <div [ngClass]="{'correct':question.wasCorrect(),'incorrect':!question.wasCorrect()}" style="" class="answer" [hidden]="!quiz.wasEvaluated">
-            <i [ngClass]="{'fa-check-circle-o': question.wasCorrect(), 'fa-times-circle': !question.wasCorrect()}" 
-                class="fa fa-3x" aria-hidden="true"></i>
-{{question.answer}}
-        </div>
-	</li>
-</ol>
+	<div class="questionlist" *ngFor="let question of quiz.questions; let firstQuestion=first; let index=index;">
+		<div class="question">
+			<div class="questionheader">
+				<div class="questionnumber">{{index}}</div> 
+				<div class="questiontitle">{{question.question}}</div>
+			</div>
+			<div class="useranswer">
+				<textarea   #focusThis
+   	                 [(ngModel)]="question.useranswer" 
+   	                 [disabled]="quiz.wasEvaluated"
+   	                 [ngClass]="{'disabled': quiz.wasEvaluated}"
+   	                 (keydown.enter)="quiz.evaluate();"
+   	                 class="textarea-default" rows="2" cols="80" placeholder="Type answer here please...">
+				</textarea>
+			</div>
+			<div [ngClass]="{'correct':question.wasCorrect(),'incorrect':!question.wasCorrect()}" 
+				class="answer" 
+				[hidden]="!quiz.wasEvaluated">
+				<i [ngClass]="{'fa-check-circle-o': question.wasCorrect(), 'fa-times-circle': !question.wasCorrect()}" 
+					class="fa fa-3x" aria-hidden="true"></i> {{question.answer}} 
+			</div>
+		</div>
+	</div>
 
 
 <div *ngIf="quiz.wasEvaluated" class="quiz-done">{{quiz.quiz_done_status_message}}</div>
-
 <button [ngClass]="{'disabled-button':quiz.wasEvaluated}" 
 		[disabled]="quiz.wasEvaluated" 
 		[hidden]="quiz.wasEvaluated"
@@ -50,27 +52,59 @@
 		(click)="newQuiz();" 
 		type="button" #continueButton 
 		id="continueButton">Play Again</button>
-
-<div *ngIf="selectedQuestion">
-	<h2>{{selectedQuestion.name}} details!</h2>
-	<div><label>id: </label>{{quiz.selectedQuestion.id}}</div>
-	<div>
-	    <label>question: </label>
-	    <input [(ngModel)]="selectedQuestion.question" placeholder="question"/>
-	</div>
-	<div>
-	    <label>answer: </label>
-	    <input [(ngModel)]="selectedQuestion.answer" placeholder="answer"/>
-	</div>
-	<div>
-	    <label>useranswer: </label>
-	    <input [(ngModel)]="selectedQuestion.useranswer" placeholder="useranswer"/>
-	</div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+<div *ngIf="quiz.quiz_display_type==quiz.ONE_QUESTION_AT_A_TIME">
+
+<div class="highlight">Hi, we are a "One question at at time"-type of quiz!</div>
+
+<h1>
+  {{title}}
+</h1>
+
+<div class="question">
+		<span class="questiontitle">{{quiz.getCurrentQuestion().question}}</span>
+        <div class="useranswer">
+        <textarea   id="usernanswer" #focusThis
+                    [(ngModel)]="quiz.getCurrentQuestion().useranswer" 
+                    [disabled]="quiz.wasEvaluated"
+   	                (keydown.enter)="quiz.evaluateThisQuestion($event);"
+                    [ngClass]="{'disabled': quiz.wasEvaluated}"
+                    class="textarea-default" rows="2" cols="80" placeholder="Type answer here please...">
+        </textarea>
+        </div>
+        <div [ngClass]="{'correct':false,'incorrect':false}" style="" class="answer" [hidden]="!quiz.wasEvaluated">
+            <i [ngClass]="{'fa-check-circle-o': false, 'fa-times-circle': false}" 
+                class="fa fa-3x" aria-hidden="true"></i>
+			{{quiz.getCurrentQuestion().answer}}
+        </div>
+</div>
+
+
+<div *ngIf="quiz.wasEvaluated" class="quiz-done">{{quiz.quiz_done_status_message}}</div>
+
+<button [ngClass]="" 
+		class="continue" 
+		[hidden]="quiz.wasEvaluated" 
+		(click)="quiz.evaluateThisQuestion();" 
+		type="button" #continueButton 
+		id="continueButton">Continue</button>
+
+</div> <!-- END of ALL_QUESTIONS_AT_ONCE type of quiz -->
+
+
 
 </div><!-- END 'content' -->
-
 </div>
 </div>
-
 </div><!-- END centering-container -->
